Alignment fixes

--- a/css/demo.css
+++ b/css/demo.css
@@ -45,8 +45,17 @@ a {
 	position: relative;
 left:2%;
 	display: block;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+	
     text-align: center;
+	
+	font-size: 30px;
+	line-height: 38px;
+	
+	
+	font-weight: 300;
+	color: #FFF;
+
+	text-shadow: 0 1px 1px rgba(255,255,255,0.6);
 }
 
 .container > header h1 {
@@ -57,7 +66,7 @@ left:2%;
 	
 	font-weight: 300;
 	color: #FFF;
-	background-color:rgba(100,100,100,0.5);
+	
 	text-shadow: 0 1px 1px rgba(255,255,255,0.6);
 }
 
@@ -67,7 +76,7 @@ left:2%;
 	margin: 0;
 	padding: 15px 0 5px 0;
 	color: #FFF;
-	background-color:rgba(100,100,100,0.5);
+	
 	font-family: Cambria, Georgia, serif;
 	font-style: italic;
 	text-shadow: 0 1px 1px rgba(255,255,255,0.6);
